--- a/app/templates/add_book.html
+++ b/app/templates/add_book.html
@@ -29,9 +29,9 @@
         <option value="Damaged">Damaged</option>
     </select>
     
-    <h2>Price Information</h2>
+    <!-- <h2>Price Information</h2>
     <h3> Price</h3>
-    <p>$</p> <input type="number" step="0.05" name="fprice">
+    <p>$</p> <input type="number" step="0.05" name="fprice"> -->
     
     <h3>Upload Images</h3>
     <input type= "file" id="book_image" name="file">
