--- a/app/templates/edit_book.html
+++ b/app/templates/edit_book.html
@@ -54,10 +54,10 @@
         {% endif %}
 
     </select>
-    
+<!--     
     <h2>Price Information</h2>
     <h3> Price</h3>
-    <p>$</p> <input type="number" step="0.05" name="fprice" value="{{book.price}}">
+    <p>$</p> <input type="number" step="0.05" name="fprice" value="{{book.price}}"> -->
     
     <h3>Upload Images</h3>
     <input type= "file" id="book_image" name="file">
