--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -25,10 +25,10 @@
     </div>
 
     <div class="hidden" id="filter-buttons">
-        <input type="number" step="0.05" name="price-min">
+        <!-- <input type="number" step="0.05" name="price-min">
         <p> Min Price</p>
         <input type="number" step="0.05"" name="price-max">
-        <p> Max Price</p>
+        <p> Max Price</p> -->
         <input type="text" name="edition">
         <p> Edition </p>
         <input type="text" name="publisher">
