--- a/app/templates/view_swap.html
+++ b/app/templates/view_swap.html
@@ -3,8 +3,12 @@
 
 <div class="bookInfo">
     <h1> Trade {{mybook.title}} </h3>
-    <img src = "data:image/png;base64, {{mybook.image_base64}}" width="500" height="500" />
-    <h2>${{mybook.price}}</h2>
+    {% if mybook.image_exists %}
+        <img src="data:image/png;base64, {{mybook.image_base64}}" width="500" height="500" />
+    {% else %}
+        <img src="../static/images/default.jpeg"/>
+    {% endif %}
+    <!-- <h2>${{mybook.price}}</h2> -->
     <div class="bookDetails">
         <h2>Book Info:</h2>
         <h3>Title: {{mybook.title}}</h3>
@@ -15,8 +19,12 @@
 </div>
 <div class="bookInfo">
     <h1> For {{otherbook.title}} </h1>
-    <img src = "data:image/png;base64, {{otherbook.image_base64}}" width="500" height="500" />
-    <h2>${{otherbook.price}}</h2>
+    {% if otherbook.image_exists %}
+        <img src="data:image/png;base64, {{otherbook.image_base64}}" width="500" height="500" />
+    {% else %}
+        <img src="../static/images/default.jpeg"/>
+    {% endif %}
+    <!-- <h2>${{otherbook.price}}</h2> -->
     <div class="bookDetails">
         <h2>Book Info:</h2>
         <h3>Title: {{otherbook.title}}</h3>
