--- a/app/templates/book_info.html
+++ b/app/templates/book_info.html
@@ -63,20 +63,27 @@
         {% endif %}
     </div>
 
-    {% if is_owner %}
-    <form id="delbook" method="GET" action="{{ url_for('delete_book', bookid=book._id) }}">
-        <input type="submit" name="delbookbtn" value="Delete Book Listing">
-    </form>
-    <form id="editbook" method="GET" action="{{ url_for('edit_book', bookid=book._id) }}">
-        <input type="submit" name="editbookbtn" value="Edit Book Listing">
-    </form>
-    {% else %}
-    <!--choose this book to swap-->
-    <div>
-        <form id="requestswap" method="POST">
-            <input type="submit" name="request" value="Request to Swap">
+    {% if book.status == 'swappable' %}
+        {% if is_owner %}
+        <form id="delbook" method="GET" action="{{ url_for('delete_book', bookid=book._id) }}">
+            <input type="submit" name="delbookbtn" value="Delete Book Listing">
         </form>
-    </div>
+        <form id="editbook" method="GET" action="{{ url_for('edit_book', bookid=book._id) }}">
+            <input type="submit" name="editbookbtn" value="Edit Book Listing">
+        </form>
+        {% else %}
+        <!--choose this book to swap-->
+        <div>
+            <form id="requestswap" method="POST">
+                <input type="submit" name="swap" value="Request to Swap">
+            </form>
+        </div>
+        {% endif %}
+    {% else %}
+        <form id="verify-swap" method="POST">
+            <input type="submit" name="verify" value="Verify Swap">
+            <input type="submit" name="cancel" value="Cancel Swap">
+        </form>
     {% endif %}
 </div>
 
