homepage fully designed

--- a/app/static/css/home.css
+++ b/app/static/css/home.css
@@ -7,13 +7,6 @@
     --black: #282828;
   }
 
-main {
-    font-size: 24px;
-    font-family: 'Roboto', sans-serif;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-
 body{
     font-size: 24px;
     font-family: 'Roboto', sans-serif;
@@ -23,29 +16,29 @@ body{
 
 .home-banner{
     display:flex;
-    max-height: 400px;
+    max-height: 600px;
 }
 
 #banner-right{
-    flex:0 1 40%;
-    max-width:40%;
-    height: 400px;
+    flex:0 1 50%;
+    max-width:50%;
+    height: 600px;
 }
 
 img{
-    height:400px;
+    height:600px;
     width: 100vw;
 }
 
 #banner-left{
-    flex:0 1 60%;
+    flex:0 1 50%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    max-width: 60%;
+    max-width: 50%;
     background-color: var(--lpurple);
-    height: 400px;
+    height: 600px;
 }
 
 #homepage-title {
@@ -66,57 +59,131 @@ img{
 
 .search-form {
     display: flex;
-    margin-top: 1rem;
     flex-direction: column;
     align-items:center;
-    flex-wrap: wrap;
     justify-content: center;
     flex-basis: 100%;
 }
 
-#search-bar {
+.search-bar-container{
+    display:inline-block;
+}
+
+.search-bar {
     background-color: var(--lpurple);
-    border: red 1px solid;
-    flex-basis: 100%;
     text-align: center;
+    padding-left: 3rem;
+    padding-right:3rem;
+    padding-top:5px;
+    padding-bottom: 5px;
+    border-radius: 4px;    
+    margin:auto;
 }
 
-#search-bar::placeholder{
+input::placeholder{
+    text-align: center;
+    margin:auto;
     font-size: 1rem;
-    color: rgb(150, 150, 150);
+    color: var(--gray);
 }
 
+#submit-button-in-text{
+    font-size:1rem;
+    margin-bottom:10px;
+    color:var(--mpurple);
+}
+#submit-button-in-text:hover{
+    color: var(--darkpurple);
+}
 
+#filter-buttons-reveal{
+    margin-right:35px;
+
+}
+#filter-button-reveal:hover{
+    cursor:pointer;
+    color: var(--darkpurple);
+}
 #filter-buttons.hidden {
     display: none;
 }
 
-/* #filter-buttons > input {
-
-} */
-
-/* #filter-button-reveal {
-    
-} */
-
-
 #submit-search {
-    background-color: black;
+    margin-left: 10px;
 }
 
 #submit-search:hover {
-    background-color: green;
+    cursor: pointer;
+}
+
+input{
+    height: 35px;
+    line-height: 45px;;
+}
+/**************** filters ******************/
+.filter-toggle{
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom:5px;
+    margin-top: 15px;
+    font-size: 0.9rem;
+}
+
+#filter-form{
+    margin-top:10px;
+    display:none;
+    align-items: center;
+    flex-direction: column;
+}
+#filter-form>label{
+    font-size: 1rem;
+    color: var(--lpurple);
+    margin-top: 5px;
+}
+#filter-form>input{
+    background-color: var(--lpurple);
+    text-align: center;
+}
+#filter-form>select{
+    font-size:1rem;
+    text-align: center;
+    margin-top:5px;
+}
+#filter-form>select>#special{
+    color:white;
+}
+
+/***************** Book Listings *****************/
+.listing-container {
+    display: grid;
+    grid-template-columns: auto auto auto auto auto;
+    grid-gap:2em;
+    background-color: var(--purple);
+    padding: 80px;
+    height: 600px;
+    overflow: auto;
+    border-radius: 15px;
+}
+
+.listing-item{
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 20px;
+    font-size: 20px;
+    text-align: center;
+    border-radius: 8px;
+}
+.listing-item>a{
+    font-size: 1.3rem;
+}
+.listing-item>a:hover{
+    cursor:point;
+    color: var(--darkpurple);
+}
+.listing-item>p{
+    font-size: 1rem;
 }
 
 
-/***************** Other Books *****************/
-.grid-container {
-    flex-basis: 100%;
-}
 
 
-/***************** SPECIAL CLASSES *****************/
 
-.hidden {
-    display: none;
-}
