--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,22 +1,36 @@
-{% extends 'wrapper.html' %}
+<!DOCTYPE html>
+<html lang="en"></html>
+    <head>
+        <link rel="stylesheet" href="../static/css/home.css"/>
+        <link rel="stylesheet" href="../static/css/reset.css">
+        <link rel="stylesheet" href="../static/css/wrapper.css">
+        <link href='https://fonts.googleapis.com/css?family=Cormorant Garamond' rel='stylesheet'>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    </head>
 
-{% block css %}
-<link
-    rel="stylesheet"
-    href="../static/css/home.css"
-    href="{{ url_for('static', filename='css/home.css') }}"
-/>
-<link rel="stylesheet" href="../static/css/reset.css">
-<link 
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-/>
-<link href='https://fonts.googleapis.com/css?family=Cormorant Garamond' rel='stylesheet'>
-{% endblock %}
-
-
-{% block container %}
 <body>
+    <div class="container">
+        <header>
+          <div class="nav-container">
+              <a class="nav-title" href="{{ url_for('home')}}">
+                <h1 id="title">BookShare</h1>
+              </a>
+              <div class="right-nav">
+                <label for="view-account" title="My Account">
+                  <a class="nav-link" href="{{ url_for('display_account')}}">
+                    <span class="material-symbols-outlined nav-icon">person</span>
+                  </a>
+                </label>
+                <label for="logout" title="Logout">
+                  <a class="nav-link" href="{{ url_for('logout')}}">
+                    <span class="material-symbols-outlined nav-icon">logout</span>
+                  </a>
+                </label>
+            </div>
+          </div>
+        </header>
     <!-- Header -->
     <div class="home-banner">
         <div id="banner-left">
@@ -28,58 +42,76 @@
         </div>
     </div>
 
-<!-- Search bar -->
-<div class="search-form">
+    <!-- Search bar -->
+    <div class="filter-toggle">
+        <button id="filter-button-reveal">
+            <span class="material-symbols-outlined">
+                tune
+                </span>
+        </button>
+    </div>
+    <div class="search-form">
         <form method='POST' action="{{url_for('home')}}" class="search-form">
-            <div id="search-bar">
-                <input type="text" name="query" placeholder="Search book titles">
-                <button type="submit" id="submit-search"><i class="fa-solid fa-magnifying-glass"></i></button>
+            <div class="search-bar-container">
+                <div class="search-bar">
+                    <input type="text" name="query" placeholder="Search book title...">
+                    <button type="submit" id="submit-search"><p id="submit-button-in-text">Search</p></button>
+                </div>
             </div>
 
-            <div class="hidden" id="filter-buttons">
-                <!-- <input type="number" step="0.05" name="price-min">
-                <p> Min Price</p>
-                <input type="number" step="0.05"" name="price-max">
-                <p> Max Price</p> -->
-                <input type="text" name="edition">
-                <p> Edition </p>
-                <input type="text" name="publisher">
-                <p> Publisher </p>
+            <!-- filter options -->
+            <div id="filter-form">
+                <label></label>
+                <input type="text" name="edition" placeholder="edition">
+                <label></label>
+                <input type="text" name="publisher" placeholder="publisher">
                 <select name="condition" id="conditon">
-                    <option value=""></option>
+                    <option id="special" value="" selected>Choose condition</option>
                     <option value="New">New</option>
                     <option value="Lightly Used">Lightly Used</option>
                     <option value="Heavily Used">Heavily Used</option>
                     <option value="Damaged">Damaged</option>
                 </select>
-                <p> Condition </p>
             </div>
         </form>
     </div>
 
-    <!-- Button to reveal filters -->
-    <button type="submit" id="filter-button-reveal">Filters</button>
-
     <!-- Everyone else's books -->
-    <div class="grid-container">
+
+    
+    <div class="listing-container">
         {% for doc in docs %}
-        <div class="grid-item"><a href="{{ url_for('book_info',bookid=doc._id)}}">{{doc.title}}</a></div>
+            <div class="listing-item">
+                <a href="{{ url_for('book_info',bookid=doc._id)}}">{{doc.title}}</a>
+                {% if doc["metadata"] %}
+                <br>
+                <br>
+                <img class= 'thumbnail' src="{{ doc.metadata.volumeInfo.imageLinks.thumbnail }}" width="250" height="250">
+                {% elif doc.image_exists %}
+                <img src="data:image/png;base64, {{doc.image_base64}}" width="500" height="500" />
+                {% else %}
+                <img src="../static/images/default.jpeg"/>
+                {% endif %}
+                <br>
+                <br>
+                <p>{{doc.condition}}</p>
+            </div>
         {%endfor%}
     </div>
+
+
+    <script>
+        const button = document.querySelector('#filter-button-reveal');
+        const filterOptions = document.querySelector('#filter-form');
+        button.addEventListener('click', () => {
+            if(filterOptions.style.display==='none'){
+                filterOptions.style.display="flex";
+            }
+            else{
+                filterOptions.style.display="none";
+            }
+        });
+    </script>
 </body>
 
-
-<script>
-
-    const button = document.querySelector('#filter-button-reveal')
-    button.addEventListener('click', (event) => {
-        event.preventDefault();
-        
-        document.querySelector('#filter-buttons')
-                .classList
-                .remove('hidden');
-    });
-
-</script>
-
-{% endblock %}
+</html>
