working out swap request display errors

--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -19,18 +19,18 @@
             formaction="{{ url_for('add_book')}}"
             class="block"
         >
-            Add book to sell
+            Add book to trade
         </button>
     </form>
     <br />
     
     {% with messages = get_flashed_messages() %}
         {% if messages %}
-            <ul class=flashes>
-        {% for message in messages %}
-            <li>{{ message }}</li>
-        {% endfor %}
-            </ul>
+            <div class=flashes>
+            {% for message in messages %}
+            <h3>{{ message }}</h3>
+            {% endfor %}
+            </div>
         {% endif %}
     {% endwith %}
 
@@ -55,24 +55,15 @@
         {%endfor%}
     </div>
     
-    <h2 id="booksForSaleTitle">Pending Books</h2>
-    <div class="grid-container">
-        {% for doc in docs_pending %}
-        <div class="grid-item">
-            <a href="{{ url_for('book_info',bookid=doc._id)}}">{{doc.title}}
-            <br>
-            <br>
-            {% if doc["metadata"] %}
-            <img class= 'thumbnail' src="{{ doc.metadata.volumeInfo.imageLinks.thumbnail }}" width="250" height="250">
-            {% elif doc.image_exists %}
-                <img src="data:image/png;base64, {{doc.image_base64}}" width="500" height="500" />
-            {%else%}
-                <img src="../static/images/default.jpeg"/>
-            {% endif %}
-            </a>
-        </div>
-        {%endfor%}
-    </div>
+    <form>
+        <button
+            type="submit"
+            formaction="{{ url_for('view_swap_requests')}}"
+            class="block"
+        >
+            View Swap Requests
+        </button>
+    </form>
 </div>
 <br />
 
