--- a/app/templates/swap_requests.html
+++ b/app/templates/swap_requests.html
@@ -7,12 +7,18 @@
     <a href="{{ url_for('view_swap', mybookid=req.mybook._id, otherbookid=req.otherbook._id)}}">
          <h2>Trade Request</h2>
     </a>
+<!--  -->
+    <p>id: {{req.mybook._id}}</p>
+<!--  -->
     <h3> Trade {{req.mybook.title}} </h3>
     {% if req.mybook.image_exists %}
         <img src="data:image/png;base64, {{req.mybook.image_base64}}" width="500" height="500" />
     {% else %}
         <img src="../static/images/default.jpeg"/>
     {% endif %}
+<!--  -->
+    <p>id: {{req.otherbook._id}}</p>
+<!--  -->
     <h3> For {{req.otherbook.title}} </h3>
 
     {% if req.otherbook.image_exists %}
