added name to display on homepage

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -94,7 +94,8 @@
                 {% endif %}
                 <br>
                 <br>
-                <p>{{doc.condition}}</p>
+                <p>User: {{doc.owner}}</p>
+                <p>Condition: {{doc.condition}}</p>
             </div>
         {%endfor%}
     </div>
