--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -24,7 +24,7 @@
     </form>
     <br />
     
-    <h2 id="booksForSaleTitle">Books for Sale</h2>
+    <h2 id="booksForSaleTitle">My Books for Sale</h2>
     <div class="grid-container">
         {% for doc in docs %}
         <div class="grid-item">
