--- a/app/templates/wrapper.html
+++ b/app/templates/wrapper.html
@@ -7,6 +7,7 @@
     {% block css %}
     {% endblock %}
     <link rel="stylesheet" href="../static/css/reset.css">
+    <link href='https://fonts.googleapis.com/css?family=Cormorant Garamond' rel='stylesheet'>
     <link
       rel="stylesheet"
       href="../static/css/wrapper.css"
