--- a/app/static/css/account.css
+++ b/app/static/css/account.css
@@ -40,6 +40,8 @@
     border-radius: 8px;
     margin-left:auto;
     margin-right:auto;
+    margin-bottom: 10px;
+    margin-top:10px;
 }
 
 .block:hover{
