--- a/app/templates/add_book.html
+++ b/app/templates/add_book.html
@@ -10,55 +10,49 @@
 
 
 {% block container %}
+<h1 id="add-title">Add Listing</h1>
 
-<form method="POST" enctype="multipart/form-data">
+<div class="add-book-form">
+  <form class="add-form" method="POST" enctype="multipart/form-data">
 
-    <h1>Add Book to Sell</h1> 
+      {% if title %}
+      <input type="text" placeholder="Title" name ="ftitle" autocomplete="{{title}}">
+      {% else %}
+      <input type="text" placeholder="Title" name ="ftitle">
+      {% endif %}
+      
+      {% if publisher %}
+      <input type="text" placeholder="Publisher" name ="fpublisher" autocomplete="{{publisher}}">
+      {% else %}
+      <input type="text" placeholder="Publisher" name ="fpublisher">
+      {% endif %}
 
-    <h2>Book Information</h2> 
+      {% if edition %}
+      <input type="text" placeholder="Edition" name ="fedition" edition="{{edition}}">
+      {% else %}
+      <input type="text" placeholder="Edition" name ="fedition">
+      {% endif %}
 
-    <h3>Title</h3>
-    {% if title %}
-    <input type="text" placeholder="Title" name ="ftitle" autocomplete="{{title}}">
-    {% else %}
-    <input type="text" placeholder="Title" name ="ftitle">
-    {% endif %}
-    
-    <h3>Publisher</h3>
-    {% if publisher %}
-    <input type="text" placeholder="Publisher" name ="fpublisher" autocomplete="{{publisher}}">
-    {% else %}
-    <input type="text" placeholder="Publisher" name ="fpublisher">
-    {% endif %}
+      <select name="fcondition" id="fconditon">
+          <option value="" selected>Choose Condition</option>
+          <option value="New">New</option>
+          <option value="Lightly Used">Lightly Used</option>
+          <option value="Heavily Used">Heavily Used</option>
+          <option value="Damaged">Damaged</option>
+      </select>
+        
+      <input type= "file" id="book_image" name="file">
+      <button type = "submit" formaction="{{ url_for('add_book')}}">Submit</button>
+  </form>
 
-    <h3>Edition</h3>
-    {% if edition %}
-    <input type="text" placeholder="Edition" name ="fedition" edition="{{edition}}">
-    {% else %}
-    <input type="text" placeholder="Edition" name ="fedition">
-    {% endif %}
-
-    <h3>Condition</h3>
-    <select name="fcondition" id="fconditon">
-        <option value="New">New</option>
-        <option value="Lightly Used">Lightly Used</option>
-        <option value="Heavily Used">Heavily Used</option>
-        <option value="Damaged">Damaged</option>
-    </select>
-       
-    <h3>Upload Images</h3>
-    <input type= "file" id="book_image" name="file">
-    <button type = "submit" formaction="{{ url_for('add_book')}}">Submit</button>
-</form>
-
-{% with messages = get_flashed_messages() %}
-    {% if messages %}
-        <div class=flashes>
-        {% for message in messages %}
-        <h3>{{ message }}</h3>
-        {% endfor %}
-        </div>
-    {% endif %}
-{% endwith %}
-
+  {% with messages = get_flashed_messages() %}
+      {% if messages %}
+          <div class=flashes>
+          {% for message in messages %}
+          <h3>{{ message }}</h3>
+          {% endfor %}
+          </div>
+      {% endif %}
+  {% endwith %}
+</div>
 {% endblock %}
